--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_145_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_154_0" />
 </head>
 <body>
   <div class="app">
@@ -21,10 +21,12 @@
 
     <div class="stepper" id="stepper">
       <div class="step step--active" data-step="photo">1 Фото</div>
-      <div class="step" data-step="zones">2 Зоны</div>
+      <div class="step" data-step="zones">2 Участки</div>
       <div class="step" data-step="cutouts">3 Вырезы</div>
       <div class="step" data-step="export">4 Сохранить</div>
     </div>
+    <div class="uxStatus" id="uxStatus"></div>
+    <div class="uxHint" id="uxHint"></div>
 
     <main class="main">
       <aside class="leftPane" id="leftPane">
@@ -41,6 +43,14 @@
         <div class="panel panel--textures" id="texturesPanel">
           <div class="panel__title">Текстуры</div>
           <div class="panel__body panel__body--textures">
+            <div class="ppTexControls">
+              <input id="texturesSearch" class="ppInput" type="search" placeholder="Поиск по текстурам…">
+              <div class="ppTexFilters">
+                <button class="ppChip ppChip--active" id="texturesFilterAll" type="button">Все</button>
+                <button class="ppChip" id="texturesFilterFav" type="button">★ Избранное</button>
+                <button class="ppChip" id="texturesFilterRecent" type="button">⏱ Недавние</button>
+              </div>
+            </div>
             <div id="texturesList" class="texturesGrid"></div>
           </div>
         </div>
@@ -130,6 +140,7 @@
         <div class="panel">
           <div class="panel__title">Настройки наложения (активная зона)</div>
           <div class="panel__body">
+            <div class="settingsBasic" id="settingsBasic">
             <label class="field">
               <span>Размер плитки (scale)</span>
 		      <!-- Scale is "repeats across near edge". Keep a pro-friendly range without extremes. -->
@@ -140,13 +151,36 @@
               <input type="range" min="0" max="360" step="1" id="rotRange" />
             </label>
 
-            <label class="field">
+	            <div class="field" id="seamStepField">
+	              <label>Подгонка швов</label>
+	              <div class="seamStepRow">
+	                <span class="seamStepLabel">Шаг</span>
+	                <select id="seamStepSel" class="seamStepSel">
+	                  <option value="0.25">0.25</option>
+	                  <option value="0.5">0.5</option>
+	                  <option value="1">1</option>
+	                </select>
+	                <span class="seamStepHint">(в плитках)</span>
+	              </div>
+	            </div>
+
+            <label class="field" id="offsetUField">
               <span>Сдвиг шва U (offsetU)</span>
               <input type="range" min="-2" max="2" step="0.01" id="offsetURange" />
+	              <div class="seamBtns">
+	                <button type="button" class="btn btn--ghost seamBtn" data-prop="offsetU" data-target="offsetURange" data-delta="-1">−</button>
+	                <button type="button" class="btn btn--ghost seamBtn" data-prop="offsetU" data-target="offsetURange" data-delta="1">+</button>
+	                <button type="button" class="btn btn--ghost seamReset" data-prop="offsetU" data-target="offsetURange">Сброс</button>
+	              </div>
             </label>
-            <label class="field">
+            <label class="field" id="offsetVField">
               <span>Сдвиг шва V (offsetV)</span>
               <input type="range" min="-2" max="2" step="0.01" id="offsetVRange" />
+	              <div class="seamBtns">
+	                <button type="button" class="btn btn--ghost seamBtn" data-prop="offsetV" data-target="offsetVRange" data-delta="-1">−</button>
+	                <button type="button" class="btn btn--ghost seamBtn" data-prop="offsetV" data-target="offsetVRange" data-delta="1">+</button>
+	                <button type="button" class="btn btn--ghost seamReset" data-prop="offsetV" data-target="offsetVRange">Сброс</button>
+	              </div>
             </label>
             <label class="field">
               <span>Интенсивность (opacity)</span>
@@ -163,7 +197,7 @@
               </select>
             </label>
 
-            <label class="field">
+            <label class="field" hidden>
               <span>Перспектива (влево — инверсия)</span>
               <input type="range" min="-1" max="1" step="0.01" id="perspectiveRange" />
             </label>
@@ -176,6 +210,12 @@
               <label>Контур</label>
               <button id="toggleContourBtn" type="button" class="btn btn--ghost">Скрыть контур</button>
             </div>
+            </div>
+            <div class="row" style="margin-top:10px">
+              <button id="toggleAdvancedBtn" type="button" class="btn btn--ghost">Дополнительно</button>
+            </div>
+            <div class="settingsAdvanced" id="settingsAdvanced" hidden>
+
 
 
             <div class="field">
@@ -229,22 +269,24 @@
               <div id="calib3dStatusText" class="note note--compact" style="margin-top:6px"></div>
             </div>
 
+            </div>
+
           </div>
         </div>
 
         <div class="panel">
-          <div class="panel__title">Зоны мощения</div>
+          <div class="panel__title">Участки мощения</div>
           <div class="panel__body">
             <div class="row">
-              <button class="btn" id="addZoneBtn">Добавить зону</button>
+              <button class="btn" id="addZoneBtn">Добавить участок</button>
               <button class="btn btn--ghost" id="splitZoneBtn" title="Выделить подзону внутри мастер-зоны (вырез + новая зона)">Разделить зону</button>
               <button class="btn btn--ghost" id="dupZoneBtn">Дублировать</button>
               <button class="btn btn--danger" id="delZoneBtn">Удалить</button>
             </div>
 
             <div class="row">
-              <label class="badge"><input type="radio" name="editScope" id="editScopeActive" value="active" checked/> Только эту зону</label>
-              <label class="badge"><input type="radio" name="editScope" id="editScopeAll" value="all"/> Все зоны</label>
+              <label class="badge"><input type="radio" name="editScope" id="editScopeActive" value="active" checked/> Этот участок</label>
+              <label class="badge"><input type="radio" name="editScope" id="editScopeAll" value="all"/> Все участки</label>
             </div>
 
             <div class="note">
@@ -294,14 +336,14 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_145_0"></script>
-  <script src="js/updater.js?v=iter2_2_145_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_145_0"></script>
-  <script src="js/ai_auto_calib.js?v=iter2_2_145_0"></script>
-  <script src="js/api.js?v=iter2_2_145_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_145_0"></script>
-  <script src="js/camera_calib.js?v=iter2_2_145_0"></script>
-  <script src="js/editor.js?v=iter2_2_145_0"></script>
-  <script src="js/app.js?v=iter2_2_145_0"></script>
+  <script src="js/state.js?v=iter2_2_154_0"></script>
+  <script src="js/updater.js?v=iter2_2_154_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_154_0"></script>
+  <script src="js/ai_auto_calib.js?v=iter2_2_154_0"></script>
+  <script src="js/api.js?v=iter2_2_154_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_154_0"></script>
+  <script src="js/camera_calib.js?v=iter2_2_154_0"></script>
+  <script src="js/editor.js?v=iter2_2_154_0"></script>
+  <script src="js/app.js?v=iter2_2_154_0"></script>
 </body>
 </html>
